<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/music_icon" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/record_name"
        android:textColor="#090101"
        android:textSize="20sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="330dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/play_button" />

    <ImageView
        android:id="@+id/stop_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="330dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/stop_button" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="55dp"
        android:centerColor="@color/colorPrimary"
        android:endColor="#191716"
        android:startColor="#A32727"
        android:enabled="false"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"/>

</RelativeLayout>
