<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info_message_text"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:text="@string/info_message" />

    <ListView
        android:id="@+id/audio_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>